<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Foody</string>

    <string name="foody_level">Foody Beginner</string>

    <string name="filters_string">Filters</string>

    <string name="okButton">OK</string>
    <string name="edit">Edit %1$s</string>
    <string name="discover">Discover</string>
    <string name="profile">Profile</string>
    <string name="edit_menu">Edit Menu</string>
    <string name="orders">Reservations</string>
    <string name="title_edit">Title</string>
    <string name="dish_edit">Dish Name</string>
    <string name="desc_edit">Dish Description</string>
    <string name="price_edit">Price</string>

    <string name="notesPlaceholder">Notes:</string>
    <string name="additional">Additional info:</string>
    <string name="idRes" translatable="false">ID:</string>

    <string name="save">Your data has been saved</string>
    <string name="noSave">Your data has been already saved</string>
    <string name="delete">Delete</string>

    <string name="transition_restaurant_card_image" translatable="false">transitionRestaurantImage</string>
    <string name="transition_restaurant_card_shadow" translatable="false">transitionRestaurantShadow</string>
    <string name="transition_restaurant_card_name" translatable="false">transitionRestaurantName</string>
    <string name="app_label">Foody User</string>
    <string name="search_hint">Search restaurant</string>

    <string name="dialog_cuisine">Filter by cuisine type</string>
    <string name="your_order">Your Order</string>
    <string name="total">Total:</string>
    <string name="delete_filter">Clear</string>


    <string name="price" translatable="false">%1$.2f €</string>
    <string name="plate" translatable="false">%1$d x %2$s</string>

    <string name="order_file_name" translatable="false">ordersFileName.json</string>
    <string name="place_order">PLACE ORDER</string>

    <string name="your_reservation">Your Reservations</string>
    <string name="your_dishes">Your Dishes</string>
    <string name="delivery_time">Delivery Time</string>
    <string name="order_status">Order Status: %1$s</string>

    <string name="insert_note">Insert Note</string>

    <string name="select_time">Select Time</string>

    <string name="soon_as_possible">As Soon As Possible</string>

    <string name="today">Today</string>
    <string name="tomorrow">Tomorrow</string>
    <string name="menu">Menu</string>
    <string name="reviews">Reviews</string>
    <string name="info">Info</string>

    <string name="reviews_whoops">Whoops</string>
    <string name="reviews_no_review_one">Looks Like There Are No Reviews Here. Don\'t Worry Though, Our Best Man Is On The Case</string>
    <string name="reviews_no_reviews_two">Meanwhile, Why don\'t you add one?</string>

    <string name="add_review">Add Review</string>

    <string name="add_comment">ADD A COMMENT?</string>
    <string name="submit_rating">Submit Rating</string>
    <string name="rate_restaurant_hint">Rate this Restaurant</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment" translatable="false">Hello blank fragment</string>

    <string name="no_favourite">No favourite restaurants</string>
    <string name="orders_history">Orders History</string>

    <string name="insert_deliv_address">Insert Delivery Address\nOR</string>
    <string name="deliv_home_address">Order To Your Home Address</string>

    <string name="insert_deliv_address_no_home">Insert Delivery Address\nOR\n\nSet Up Your Address in the Profile Page to order at your Home Address</string>
    <string name="your_reviews">Your reviews</string>

    <string name="loved">Loved</string>
</resources>