<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.foodyuser.RestaurantShow">

    
    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="240dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/restaurant_image"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:clickable="true"
            android:transitionName="@string/transition_restaurant_card_image"
            android:scaleType="centerCrop"
            />

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:src="@drawable/shadow_restaurants"
            android:scaleType="centerCrop"
            android:transitionName="@string/transition_restaurant_card_shadow"
            />

        <TextView
            android:id="@+id/restaurant_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/roboto_bold"
            android:textSize="30sp"
            android:text="RossoPomodoro"
            android:textColor="@color/whiteText"
            android:layout_marginStart="16dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_marginTop="13dp"
            android:transitionName="@string/transition_restaurant_card_name"
            />
    </android.support.constraint.ConstraintLayout>


    
</android.support.constraint.ConstraintLayout>
