<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    android:id="@+id/parent_restaurants"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/dark_white_background"
    >

    <View
        android:layout_width="10dp"
        android:layout_height="10dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:background="@android:color/transparent"
        android:focusable="true"
        android:focusableInTouchMode="true"/>

    <EditText
        android:id="@+id/search_restaurant"
        android:layout_width="match_parent"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:layout_height="wrap_content"
        android:padding="10dp"
        android:drawableStart="@drawable/search_black"
        android:drawableTint="@color/secondaryText"
        android:textColorHint="@color/secondaryText"
        android:fontFamily="@font/roboto_regular"
        android:textSize="18sp"
        android:drawablePadding="20dp"
        android:background="@drawable/search_background"
        android:elevation="20dp"
        android:hint="@string/search_hint"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:maxLines="1"
        android:inputType="text"
        android:lines="1"/>


    <android.support.v7.widget.RecyclerView
        android:id="@+id/list_restaurants"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingTop="100dp"
        android:clipToPadding="false"/>

    <com.github.ybq.android.spinkit.SpinKitView
        android:id="@+id/loading_restaurants"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        style="@style/SpinKitView.Large.CubeGrid"
        app:SpinKit_Color="@color/colorAccent"
        />


    <android.support.constraint.ConstraintLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/main_constraint"
        android:background="@android:color/transparent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:elevation="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        >

        <View
            android:layout_width="1dp"
            android:layout_height="40dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            android:background="@color/divider"
            android:elevation="1dp"/>

        <android.support.constraint.Guideline
            android:id="@+id/guideline_fabs"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_percent="0.5"/>

        <!--This MUST remain 18 dp, do not correct the warning-->
        <TextView
            android:id="@+id/filter_button_text"
            android:layout_width="160dp"
            android:layout_height="wrap_content"
            android:background="@drawable/filters_background"
            android:clickable="true"
            android:drawableStart="@drawable/filter_white"
            android:drawablePadding="10dp"
            android:drawableTint="@color/colorAccent"
            android:focusable="true"
            android:fontFamily="@font/roboto_regular"
            android:paddingStart="30dp"
            android:paddingTop="10dp"
            android:paddingEnd="30dp"
            android:paddingBottom="10dp"
            android:text="@string/filters_string"
            android:textColor="@color/colorAccent"
            android:textSize="18dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toEndOf="@id/guideline_fabs"
            app:layout_constraintTop_toTopOf="parent" />

        <!--This MUST remain 18 dp, do not correct the warning-->
        <TextView
            android:id="@+id/favs_button_text"
            android:layout_width="160dp"
            android:layout_height="wrap_content"
            android:clickable="true"
            android:drawableStart="@drawable/heart_empty"
            android:drawablePadding="10dp"
            android:drawableTint="@color/colorAccent"
            android:background="@drawable/favs_background_dis"
            android:focusable="true"
            android:fontFamily="@font/roboto_regular"
            android:paddingStart="30dp"
            android:paddingTop="10dp"
            android:paddingEnd="30dp"
            android:paddingBottom="10dp"
            android:text="@string/loved"
            android:textColor="@color/colorAccent"
            android:textSize="18dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toStartOf="@id/guideline_fabs"
            app:layout_constraintTop_toTopOf="parent" />


    </android.support.constraint.ConstraintLayout>


</android.support.constraint.ConstraintLayout>