<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginStart="20dp"
    android:layout_marginEnd="20dp"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@android:color/transparent">

    <android.support.design.button.MaterialButton
        android:id="@+id/review_submit"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:text="@string/submit_rating"
        android:textAllCaps="false"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/layout"
        android:layout_marginTop="20dp"
        android:elevation="1dp"
        app:cornerRadius="10dp"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        />
    
    <android.support.constraint.ConstraintLayout
        android:id="@+id/layout"
        android:layout_width="match_parent"
        android:elevation="20dp"
        android:background="@drawable/dialog_review_background"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp">

        <View
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:focusableInTouchMode="true"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_marginTop="20dp"
            android:focusable="true"
            android:clickable="true"
            />

        <EditText
            android:id="@+id/review_comment"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="120dp"
            android:hint="@string/add_comment"
            android:textSize="14sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:lines="3"
            android:maxLines="3"
            android:gravity="center"/>


        <RatingBar
            android:id="@+id/review_rating"
            android:layout_width="wrap_content"
            android:layout_height="28dp"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="20dp"
            android:numStars="5"
            android:progressDrawable="@drawable/ratingbar_custom"
            android:stepSize="0.01"
            android:scaleX="1.5"
            android:scaleY="1.5"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/review_comment"
            />
    </android.support.constraint.ConstraintLayout>

    <android.support.constraint.ConstraintLayout
        android:id="@+id/review_image_layout"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:elevation="30dp"
        android:background="@drawable/dialog_review_background"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="10dp"
        android:focusableInTouchMode="true"
        android:focusable="true"
        android:clickable="true"
        >
        <ImageView
            android:id="@+id/review_image"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            android:src="@drawable/user_static_background"
            android:scaleType="center"
            />

        <View
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="#000000"
            android:alpha="0.6"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"/>

       <LinearLayout
           android:layout_width="wrap_content"
           android:layout_height="wrap_content"
           android:orientation="vertical"
           app:layout_constraintStart_toStartOf="parent"
           app:layout_constraintTop_toTopOf="parent"
           app:layout_constraintBottom_toBottomOf="parent"
           android:layout_marginStart="40dp">
           <TextView
               android:layout_width="wrap_content"
               android:layout_height="wrap_content"
               android:text="@string/rate_restaurant_hint"
               android:textColor="@color/whiteText"
               android:textSize="16sp"
               android:fontFamily="@font/roboto_regular"/>

           <TextView
               android:id="@+id/review_restaurant_name"
               android:layout_width="wrap_content"
               android:layout_height="wrap_content"
               android:text="RossoPomodoro"
               android:layout_marginTop="2dp"
               android:textColor="@color/whiteText"
               android:textSize="22sp"
               android:fontFamily="@font/roboto_bold"/>
       </LinearLayout>

    </android.support.constraint.ConstraintLayout>

</android.support.constraint.ConstraintLayout>