<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/dark_white_background">

    <android.support.v7.widget.CardView
        android:id="@+id/user_reservation_card"
        android:animateLayoutChanges="true"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginBottom="8dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        app:cardCornerRadius="16dp"
        android:elevation="8dp"
        android:visibility="visible">

        <android.support.constraint.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            >

            <ImageView
                android:id="@+id/user_reservation_restaurant_image"
                android:layout_width="0dp"
                android:layout_height="120dp"
                android:src="@drawable/user_static_background"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                android:scaleType="centerCrop"/>

            <ImageView
                android:id="@+id/user_reservation_restaurant_shadow"
                android:layout_width="0dp"
                android:elevation="2dp"
                android:layout_height="120dp"
                android:src="@drawable/shadow_drop_down"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                android:scaleType="centerCrop"/>

            <TextView
                android:id="@+id/user_reservation_restaurant_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                android:textColor="@color/whiteText"
                android:elevation="5dp"
                android:fontFamily="@font/roboto_bold"
                android:textSize="24sp"
                android:layout_marginStart="16dp"
                android:layout_marginTop="10dp"/>

            <TextView
                android:id="@+id/user_reservation_restaurant_address"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/user_reservation_restaurant_name"
                android:textColor="@color/whiteText"
                android:elevation="5dp"
                android:fontFamily="@font/roboto_regular"
                android:textSize="14sp"
                android:layout_marginStart="16dp"
                />

            <TextView
                android:id="@+id/user_reservation_order_status_string"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="8dp"
                android:fontFamily="@font/roboto_regular"
                android:text="Order Status: DELIVERING"
                android:textColor="@color/colorPrimary"
                android:textSize="21sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/user_reservation_restaurant_shadow" />

            <TextView
                android:id="@+id/user_reservation_your_dishes"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="8dp"
                android:fontFamily="@font/roboto_regular"
                android:text="@string/your_dishes"
                android:textColor="@color/colorPrimary"
                android:textSize="21sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/user_reservation_order_status_string" />


            <LinearLayout
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@id/user_reservation_your_dishes"
                android:paddingStart="16dp"
                android:paddingEnd="16dp"
                android:orientation="vertical"
                android:id="@+id/user_reservation_dish_list"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                />


            <TextView
                android:id="@+id/user_reservation_total_string"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/total"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/user_reservation_dish_list"
                android:textColor="@color/colorAccent"
                android:fontFamily="@font/roboto_bold"
                android:textSize="21sp"
                android:layout_marginStart="16dp"
                android:layout_marginTop="16dp"/>


            <TextView
                android:id="@+id/user_reservation_total"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="16dp"
                android:fontFamily="@font/roboto_bold"
                android:text="35.70 €"
                android:textColor="@color/colorAccent"
                android:textSize="21sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@id/user_reservation_dish_list" />




            <TextView
                android:id="@+id/user_reservation_delivery_time_string"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/delivery_time"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/user_reservation_total_string"
                app:layout_constraintBottom_toBottomOf="parent"
                android:layout_marginBottom="16dp"
                android:textColor="@color/colorPrimary"
                android:fontFamily="@font/roboto_bold"
                android:textSize="21sp"
                android:layout_marginStart="16dp"
                android:layout_marginTop="16dp"/>

            <TextView
                android:id="@+id/user_reservation_delivery_time"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="19.30"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@id/user_reservation_total_string"
                android:textColor="@color/colorPrimary"
                android:fontFamily="@font/roboto_bold"
                android:textSize="21sp"
                android:layout_marginEnd="16dp"
                android:layout_marginTop="16dp"/>

        </android.support.constraint.ConstraintLayout>

    </android.support.v7.widget.CardView>


</android.support.constraint.ConstraintLayout>
